--- a/css/style.css
+++ b/css/style.css
@@ -1085,6 +1085,8 @@ input[type="submit"] {
 
 .widget-search input[type="search"],
 #contact-form input[type="text"],
+#contact-form input[type="email"],
+#contact-form input[type="tel"],
 #contact-form textarea,
 #respond input[type="text"],
 #respond textarea {
